WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32447
Content in <iframe> doesn't appear when going back to
http://webkit.org/blog/386/3d-transforms/
https://bugs.webkit.org/show_bug.cgi?id=32447
Summary
Content in <iframe> doesn't appear when going back to http://webkit.org/blog/...
Adam Roben (:aroben)
Reported
2009-12-11 14:02:03 PST
To reproduce: 1. Go to
http://webkit.org/blog/386/3d-transforms/
2. Go to some other page 3. Click the Back button The <iframe>'s content (which appears in the upper-left corner due to
bug 32446
) doesn't appear.
Attachments
Patch
(4.90 KB, patch)
2010-10-21 16:00 PDT
,
Chris Marrin
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2009-12-11 14:09:26 PST
<
rdar://problem/7465609
>
Simon Fraser (smfr)
Comment 2
2010-08-26 11:28:44 PDT
***
Bug 44698
has been marked as a duplicate of this bug. ***
Chris Marrin
Comment 3
2010-10-21 16:00:08 PDT
Created
attachment 71507
[details]
Patch
Dean Jackson
Comment 4
2010-10-21 16:27:06 PDT
Comment on
attachment 71507
[details]
Patch Couldn't you make the manual test show success or failure? You're just printing the layerTree into a <pre>, but you could actually look at the text to say "PASS" or "FAIL".
Chris Marrin
Comment 5
2010-10-21 16:29:22 PDT
(In reply to
comment #4
)
> (From update of
attachment 71507
[details]
) > Couldn't you make the manual test show success or failure? You're just printing the layerTree into a <pre>, but you could actually look at the text to say "PASS" or "FAIL".
Remember this is not a layout test. There's no way for me to know if the image is showing up. I can't do layerAsText() unless I'm in DRT and the bug doesn't happen there. So I don't know of any way short of visual inspection to determine if the bug is fixed.
Adam Roben (:aroben)
Comment 6
2010-10-21 17:48:30 PDT
Comment on
attachment 71507
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=71507&action=review
> WebCore/ChangeLog:14 > + There is no layout test, but I added a manual test. This test is ready to be a layout test > + but I could not get the queueBackNavigation/queueForwardNavigation functions in > + LayoutTestController to behave like manually hitting the forward/back buttons, so the > + failure didn't occur.
DRT doesn't have the back/forward cache enabled. Maybe that's the problem?
Adam Roben (:aroben)
Comment 7
2010-10-22 11:07:00 PDT
Comment on
attachment 71507
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=71507&action=review
> WebCore/manual-tests/compositing/show-composited-iframe-on-back-button.html:10 > + <!-- > + This content was originally intended as a layout test, but the sequencing performed by > + queueBackNavigation/queueForwardNavigation differs somehow from what occurs when hitting > + the back and forward buttons, so the error does not occur. I've left all the LayoutTestController > + logic in the test in case this is fixed in the future. > + -->
I think you should add a comment about DRT's back/forward cache being disabled. Maybe these days we have a way to enable it for certain tests?
Chris Marrin
Comment 8
2010-10-22 11:46:21 PDT
Landed in
http://trac.webkit.org/changeset/70321
Simon Fraser (smfr)
Comment 9
2010-11-02 15:47:08 PDT
***
Bug 29361
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug