2010-10-21  Chris Marrin  <cmarrin@apple.com>

Reviewed by Adam Roben.

        Content in <iframe> doesn't appear when going back to http://webkit.org/blog/386/3d-transforms/
        https://bugs.webkit.org/show_bug.cgi?id=32447

        Added documentDidBecomeActive() when document comes back from cache to cause compositing
        layers in iframes to be reattached.

        There is no layout test, but I added a manual test. This test is ready to be a layout test
        but currently DRT disables the WebCore page cache, so the back/forward essentially do a
        page load which does not exhibit the bug.

        * history/CachedFrame.cpp:
        (WebCore::CachedFrameBase::restore):
        * manual-tests/compositing/show-composited-iframe-on-back-button.html: Added.



Canonical link: https://commits.webkit.org/60870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70321 268f45cc-cd09-0410-ab3c-d52691b4dbfc